--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
 	<div id="tools">
 		<div class="tool">
 			<p><a href="https://pomasters.github.io/SyncPairEditor/" target="_blank">Sync Pair Editor<img src="link.png"></a></p>
-			<img src="captures/editor2.png">
+			<img src="captures/editor3.png">
 		</div>
 
 		<div class="tool">
 			<p><a href="https://pomasters.github.io/SyncPairsTracker/" target="_blank">Sync Pairs Tracker<img src="link.png"></a></p>
-			<img src="captures/tracker1.png">
+			<img src="captures/tracker3.png">
 		</div>
 
 		<div class="tool">
 			<p><a href="https://pomasters.github.io/LimitedSyncPairs/" target="_blank">Limited Sync Pairs<img src="link.png"></a></p>
 			<img src="captures/limited.png">
+		</div>
+
+		<div class="tool">
+			<p><a href="https://pomasters.github.io/NonLimitedSyncPairs/" target="_blank">Non Limited Sync Pairs<img src="link.png"></a></p>
+			<img src="captures/nonlimited.png">
 		</div>
 	</div>
 </body>
