--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 	<div id="tools">
 		<div class="tool">
 			<p><a href="https://pomasters.github.io/SyncPairEditor/" target="_blank">Sync Pair Editor<img src="link.png"></a></p>
-			<img src="captures/editor3.png">
+			<img src="captures/editor4.png">
 		</div>
 
 		<div class="tool">
 			<p><a href="https://pomasters.github.io/SyncPairsTracker/" target="_blank">Sync Pairs Tracker<img src="link.png"></a></p>
-			<img src="captures/tracker3.png">
+			<img src="captures/tracker4.png">
+		</div>
+
+		<div class="tool">
+			<p><a href="https://pomasters.github.io/Tierlist/" target="_blank">Sync Pairs Tier List<img src="link.png"></a></p>
+			<img src="captures/tierlist.png">
 		</div>
 
 		<div class="tool">
