--- a/limited/index.html
+++ b/limited/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="refresh" content="0; url=https://pomasters.github.io/Table/">
+	<meta http-equiv="refresh" content="0; url=https://pomasters.github.io/LimitedSyncPairs/">
 	<title>Redirecting...</title>
 </head>
 <body>
