--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
 
 		<div class="tool">
 			<p><a href="https://pomasters.github.io/LimitedSyncPairs/" target="_blank">Limited Sync Pairs<img src="link.png"></a></p>
-			<img src="captures/limited.png">
-		</div>
-
-		<div class="tool">
-			<p><a href="https://pomasters.github.io/NonLimitedSyncPairs/" target="_blank">Non Limited Sync Pairs<img src="link.png"></a></p>
-			<img src="captures/nonlimited.png">
+			<img src="captures/limited2.png">
 		</div>
 	</div>
 </body>
