Add scout simulator

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 		</div>
 
 		<div class="tool">
+			<p><a href="https://pomasters.github.io/ScoutSimulator/" target="_blank">Scout Simulator<img src="link.png"></a></p>
+			<img src="captures/simulator1.png">
+		</div>
+
+		<div class="tool">
 			<p><a href="https://pomasters.github.io/LimitedSyncPairs/" target="_blank">Limited Sync Pairs<img src="link.png"></a></p>
 			<img src="captures/limited2.png">
 		</div>
